Profile modal is working with the loop -changed and fixed, styling and layout issues -edited placeholder content with faker

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -83,82 +83,14 @@ table.up-close {
   margin: 0;
 }
 
-#profile * {
-  z-index: 2;
-}
-
-div[id^='profileModal'] {
-  z-index: 9000;
-}
+// #profile * {
+//   z-index: 2;
+// }
 
 @media(min-width:767px) {
   #profile .profile-item {
     margin: 0 0 30px;
   }
-}
-
-.btn-outline {
-  margin-top: 15px;
-  border: solid 2px #fff;
-  font-size: 20px;
-  color: #fff;
-  background: 0 0;
-  transition: all .3s ease-in-out;
-}
-
-.btn-outline:hover,
-.btn-outline:focus,
-.btn-outline:active,
-.btn-outline.active {
-  border: solid 2px #fff;
-  color: #18bc9c;
-  background: #fff;
-}
-
-
-
-
-form .row:first-child .floating-label-form-group {
-  border-top: 1px solid #eee;
-}
-
-footer {
-  color: #fff;
-}
-
-footer h3 {
-  margin-bottom: 30px;
-}
-
-footer .footer-above {
-  padding-top: 50px;
-  background-color: #2c3e50;
-}
-
-footer .footer-col {
-  margin-bottom: 50px;
-}
-
-footer .footer-below {
-  padding: 25px 0;
-  background-color: #233140;
-}
-
-.btn-social {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  border: 2px solid #fff;
-  border-radius: 100%;
-  text-align: center;
-  font-size: 20px;
-  line-height: 45px;
-}
-
-.btn:focus,
-.btn:active,
-.btn.active {
-  outline: 0;
 }
 
 .profile-modal .modal-content {
